.kube/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roots-backend
  namespace: default
  labels:
    app: roots-backend
spec:
  selector:
    matchLabels:
      app: roots-backend
  template:
    metadata:
      labels:
        app: roots-backend
    spec:
      containers:
        - name: roots-front
          image: "omridim/roots-back:1.3"
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
                exec:
                  command:
                  - /bin/sh 
                  - "-c"
                  - | 
                          wget -qO- --header="Origin: http://localhost:3000" http://localhost:9000/api/health &> /dev/null
          readinessProbe:
               exec:
                  command:
                  - /bin/sh
                  - "-c"   
                  - | 
                   wget -qO- --header="Origin: http://localhost:3000" http://localhost:9000/api/health &> /dev/null
