.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roots-front
  namespace: default
  labels:
    app: roots-front
spec:
  selector:
    matchLabels:
      app: roots-front
  template:
    metadata:
      labels:
        app: roots-front
    spec:
      containers:
      - name: roots-front
        image: dorsivan/roots-front:dev.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 800m
            memory: "1024Mi"
          requests:
            cpu: 500m
