.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-service-roots
  namespace: roots-preprod
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: roots-front-service
            port:
              number: 80
        path: *
